вшил бин организации
