# routes/routes.go
@@ -3,13 +3,11 @@ package routes
 import (
 	"admin_panel/pkg/controller"
 	"admin_panel/utils"
-	"fmt"
 	"github.com/gin-gonic/gin"
 	"github.com/swaggo/files"
 	ginSwagger "github.com/swaggo/gin-swagger"
+	"log"
 	"net/http"
-	"os"
-
 	//_ "github.com/rizalgowandy/go-swag-sample/docs/ginsimple" // you need to update github.com/rizalgowandy/go-swag-sample with your own project path
 	_ "admin_panel/docs"
 )
@@ -51,7 +49,7 @@ func runAllRoutes(r *gin.Engine) {
 	//TODO: интеграция по договорам
 
 	//TODO:  добавить функцию обработчика
-	r.GET("/counterparty/:client/:organization", controller.CounterpartyContract)
+	r.GET("/counterparty/:client", controller.CounterpartyContract)
 
 
 
@@ -112,11 +110,11 @@ func runAllRoutes(r *gin.Engine) {
 
 	//	Start server
 
-	_ = r.Run(fmt.Sprintf("%s:%s", "0.0.0.0", os.Getenv("PORT")))
+	//_ = r.Run(fmt.Sprintf("%s:%s", "0.0.0.0", os.Getenv("PORT")))
 	//_ = r.Run(fmt.Sprintf("%s:%s", "localhost", "3001"))
-	//if err := r.Run(":3000"); err != nil {
-	//	log.Fatal(err)
-	//}
+	if err := r.Run(":3000"); err != nil {
+		log.Fatal(err)
+	}
 
 
 }
